--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 text-center my-3">
       <span class="copyright lead">
         <b
-          >Copyright &copy; Colorado LLC Attorney 2003 -
+          >Copyright &copy; Delaware LLC Attorney 2003 -
           <script>
             document.write(new Date().getFullYear());
           </script>
