--- a/templates/home.html
+++ b/templates/home.html
@@ -120,182 +120,194 @@
         </p>
       </div>
 
-      <div class="col-lg-8 mx-auto paragraph multi-p">
-        <div class="column">
-          <div>
-            <h4>What is a Registered Agent?</h4>
-            <p>
-              Registered agents are a responsible third-party that are available
-              to receive service of process notes, official correspondence
-              including correspondence from the Secretary of State, and any
-              other official notifications.
-            </p>
-            <p>
-              Usually, they are responsible for receiving tax forms, notice of
-              lawsuits, and other official notifications that are time-sensitive
-              on behalf of your corporation, LLC, or partnership. Registered
-              agents are required to have an address in the state where the
-              business was registered. A P.O. box does not count as a local
-              address since registered agents are required to receive
-              time-sensitive information.
-            </p>
-          </div>
-          <div>
-            <h4>Why You Need a Registered Agent</h4>
-            <p>
-              Registered agents come with a lot of benefits. They make the
-              management of your business a lot easier, along with several other
-              core business advantages. They also offer some core protections
-              that help you keep your business and personal life separate.
-            </p>
-          </div>
-          <div>
-            <h4>Avoid Being Served in Front of Family and Friends</h4>
-            <p>
-              When you’re serving as a registered agent for your own business
-              you risk getting served while you are away from your business.
-              Since legal notifications are often time-sensitive the person
-              serving the documents isn’t likely to wait for a convenient moment
-              to deliver the paperwork.
-            </p>
-          </div>
-          <div>
-            <h4>Why are you required to have a registered agent?</h4>
-            <p>
-              Businesses are required to have a registered agent because
-              business correspondence can be unpredictable and very
-              time-sensitive, the state needs to know where your business can be
-              contacted any day during business hours.
-            </p>
-          </div>
-          <div>
-            <h4>Requirements of a Registered Agent</h4>
-            <p>
-              Registered agents must be at least 18 years of age, must have a
-              physical address in the state where your business is registered,
-              and must be available at that address during your hours of
-              business.
-            </p>
-          </div>
-          <div>
-            <h4>Can You Assign Yourself as a Registered Agent?</h4>
-            <p>
-              If you live in the same state as your business is registered you
-              can assign yourself as a registered agent for your company, but it
-              isn’t always a good idea to do so. Being your own registered agent
-              can add a lot of complications to your business life.
-            </p>
-          </div>
-          <div>
-            <h4>
-              Are There Any Consequences for Not Having a Registered Agent?
-            </h4>
-            <p>
-              Yes. The most common consequence for not having a registered agent
-              is that the state will dissolve your LLC or corporation when the
-              problem is discovered. Dissolving your business does not usually
-              mean that it is not responsible for its tax obligations, legal
-              settlements, or any outstanding debts. If your business is
-              dissolved for not having a registered agent your liability
-              protection may also be affected.
-            </p>
-          </div>
-        </div>
-        <div class="column">
-          <div>
-            <h4>What Does a Registered Agent Do?</h4>
-            <p>
-              Registered agents essentially provide a point of contact for your
-              business in its registered state. They are there to accept a
-              service of process legal notifications and tax documents. Good
-              registered agents also provide additional services, often
-              including company formations, bookkeeping, accounting, virtual
-              offices, and mail handling. Not every agent will offer all of
-              these services, but most will offer one or two in addition to
-              acting as a basic registered agent. They are also responsible for
-              accepting legal documents pertaining to any lawsuits or judgments
-              involving your business.
-            </p>
-          </div>
-          <div>
-            <h4>Avoid Putting Your Address Online</h4>
-            <p>
-              Having a registered agent helps you avoid putting your personal
-              address online as your business address if you don’t have a
-              physical office yet.
-            </p>
-          </div>
-          <div>
-            <h4>Assistance with Additional Services</h4>
-            <p>
-              Since registered agents are usually also qualified business
-              professionals in their own right, many also offer other management
-              services that take some of the burden out of running your own
-              business. Commonly bookkeeping, accepting other kinds of mail, and
-              even accounting can be included in their list of services.
-            </p>
-          </div>
-          <div>
-            <h4>How to Choose a Registered Agent</h4>
-            <p>
-              Choosing an agent is an important step in figuring out how your
-              business will be run. Any agents in consideration have to meet a
-              few requirements, or they won’t count as an agent with the state.
-            </p>
-          </div>
-          <div>
-            <h4>Qualities to Look For?</h4>
-            <p>
-              You should look for other professional qualifications as well as
-              testimonials from their other clients or recommendations from
-              their previous employer. Attorneys, CPAs, and fiduciaries are all
-              potentially good candidates for a registered agent. Other
-              professional qualifications related to business, accounting, or
-              financial management are all good signs.
-            </p>
-          </div>
-          <div>
-            <h4>What Happens If You Don’t Have a Registered Agent</h4>
-            <p>
-              Not having a registered agent can mean that your business can’t be
-              registered as an LLC or a corporation. Having an agent on paper,
-              but who cannot be reached when required for tax documents, legal
-              documents and notifications, can cause other problems for your
-              business, with the state and with plenty of other entities.
-            </p>
-          </div>
-        </div>
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>What is a Registered Agent?</h2>
+        <p>
+          Registered agents are a responsible third-party that are available to
+          receive service of process notes, official correspondence including
+          correspondence from the Secretary of State, and any other official
+          notifications.
+        </p>
+        <p>
+          Usually, they are responsible for receiving tax forms, notice of
+          lawsuits, and other official notifications that are time-sensitive on
+          behalf of your corporation, LLC, or partnership. Registered agents are
+          required to have an address in the state where the business was
+          registered. A P.O. box does not count as a local address since
+          registered agents are required to receive time-sensitive information.
+        </p>
       </div>
 
       <div class="col-lg-8 mx-auto paragraph">
-        <h2>FAQs</h2>
-        <h4>What is the purpose of a registered agent?</h4>
+        <h2>Why You Need a Registered Agent</h2>
         <p>
-          A registered agent’s basic responsibility is to receive mail and
-          notifications on behalf of a business. They are required to be
-          available at all times during the business’s normal hours, which frees
-          other representatives of the business to leave the office, go on
-          vacation, and otherwise be unavailable for official governmental and
-          legal correspondence.
+          Registered agents come with a lot of benefits. They make the
+          management of your business a lot easier, along with several other
+          core business advantages. They also offer some core protections that
+          help you keep your business and personal life separate.
         </p>
-        <h4>What does it take to be a registered agent?</h4>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Avoid Being Served in Front of Family and Friends</h2>
         <p>
-          The first basic requirement to be a registered agent is that you are
-          at least 18 years of age and are considered legally competent. You are
-          also required to maintain an address (business or residence) within
-          the same state as the business. The address is required to be a
-          physical address, PO boxes don't count. Some states also have other
-          requirements. For instance, in Virginia, the registered agent must be
-          either an attorney or a part of the business's management.
+          When you’re serving as a registered agent for your own business you
+          risk getting served while you are away from your business. Since legal
+          notifications are often time-sensitive the person serving the
+          documents isn’t likely to wait for a convenient moment to deliver the
+          paperwork.
         </p>
-        <h4>Can I be my own registered agent in Delaware?</h4>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Why are you required to have a registered agent?</h2>
         <p>
-          Yes, Delaware allows business people to act as their own registered
-          agents in Delaware as long as they meet all other requirements of the
-          position. If you serve as your own registered agent you are also
-          required to be available during all normal business hours or to have
-          another registered agent available in your stead.
+          Businesses are required to have a registered agent because business
+          correspondence can be unpredictable and very time-sensitive, the state
+          needs to know where your business can be contacted any day during
+          business hours.
         </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Requirements of a Registered Agent</h2>
+        <p>
+          Registered agents must be at least 18 years of age, must have a
+          physical address in the state where your business is registered, and
+          must be available at that address during your hours of business.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Can You Assign Yourself as a Registered Agent?</h2>
+        <p>
+          If you live in the same state as your business is registered you can
+          assign yourself as a registered agent for your company, but it isn’t
+          always a good idea to do so. Being your own registered agent can add a
+          lot of complications to your business life.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Are There Any Consequences for Not Having a Registered Agent?</h2>
+        <p>
+          Yes. The most common consequence for not having a registered agent is
+          that the state will dissolve your LLC or corporation when the problem
+          is discovered. Dissolving your business does not usually mean that it
+          is not responsible for its tax obligations, legal settlements, or any
+          outstanding debts. If your business is dissolved for not having a
+          registered agent your liability protection may also be affected.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>What Does a Registered Agent Do?</h2>
+        <p>
+          Registered agents essentially provide a point of contact for your
+          business in its registered state. They are there to accept a service
+          of process legal notifications and tax documents. Good registered
+          agents also provide additional services, often including company
+          formations, bookkeeping, accounting, virtual offices, and mail
+          handling. Not every agent will offer all of these services, but most
+          will offer one or two in addition to acting as a basic registered
+          agent. They are also responsible for accepting legal documents
+          pertaining to any lawsuits or judgments involving your business.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Avoid Putting Your Address Online</h2>
+        <p>
+          Having a registered agent helps you avoid putting your personal
+          address online as your business address if you don’t have a physical
+          office yet.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Assistance with Additional Services</h2>
+        <p>
+          Since registered agents are usually also qualified business
+          professionals in their own right, many also offer other management
+          services that take some of the burden out of running your own
+          business. Commonly bookkeeping, accepting other kinds of mail, and
+          even accounting can be included in their list of services.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>How to Choose a Registered Agent</h2>
+        <p>
+          Choosing an agent is an important step in figuring out how your
+          business will be run. Any agents in consideration have to meet a few
+          requirements, or they won’t count as an agent with the state.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>Qualities to Look For?</h2>
+        <p>
+          You should look for other professional qualifications as well as
+          testimonials from their other clients or recommendations from their
+          previous employer. Attorneys, CPAs, and fiduciaries are all
+          potentially good candidates for a registered agent. Other professional
+          qualifications related to business, accounting, or financial
+          management are all good signs.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph">
+        <h2>What Happens If You Don’t Have a Registered Agent</h2>
+        <p>
+          Not having a registered agent can mean that your business can’t be
+          registered as an LLC or a corporation. Having an agent on paper, but
+          who cannot be reached when required for tax documents, legal documents
+          and notifications, can cause other problems for your business, with
+          the state and with plenty of other entities.
+        </p>
+      </div>
+
+      <div class="col-lg-8 mx-auto paragraph multi-p">
+        <h2 class="flex-grow-1 w-100">FAQs</h2>
+        <div class="column">
+          <div>
+            <h4>What is the purpose of a registered agent?</h4>
+            <p>
+              A registered agent’s basic responsibility is to receive mail and
+              notifications on behalf of a business. They are required to be
+              available at all times during the business’s normal hours, which
+              frees other representatives of the business to leave the office,
+              go on vacation, and otherwise be unavailable for official
+              governmental and legal correspondence.
+            </p>
+          </div>
+          <div>
+            <h4>Can I be my own registered agent in Delaware?</h4>
+            <p>
+              Yes, Delaware allows business people to act as their own
+              registered agents in Delaware as long as they meet all other
+              requirements of the position. If you serve as your own registered
+              agent you are also required to be available during all normal
+              business hours or to have another registered agent available in
+              your stead.
+            </p>
+          </div>
+        </div>
+        <div class="column">
+          <div>
+            <h4>What does it take to be a registered agent?</h4>
+            <p>
+              The first basic requirement to be a registered agent is that you
+              are at least 18 years of age and are considered legally competent.
+              You are also required to maintain an address (business or
+              residence) within the same state as the business. The address is
+              required to be a physical address, PO boxes don't count. Some
+              states also have other requirements. For instance, in Virginia,
+              the registered agent must be either an attorney or a part of the
+              business's management.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
